--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* outline: 2px solid red; */
 }
 
 html,
@@ -16,14 +17,32 @@ body{
 
 .gradient{
 position: absolute;
-width: 861px;
-height: 861px;
+width: 100%;
+height: 100%;
 left: calc(50% - 861px/2 - 117.5px);
 top: calc(50% - 861px/2 + 166.5px);
 background: rgba(24, 100, 255, 0.35);
 opacity: 0.5;
 filter: blur(200px);
 transform: rotate(-19.25deg);
+z-index: -1;
+}
+
+
+.hero-pattern {
+  background-image: url(./assets/images/bg-pattern-100.png);
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
+  width: 100%;
+  height: inherit;
+  position: absolute;
+  opacity: 0.05;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index:-1;
 }
 
 @font-face {
