--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body{
   background-color:#010E21 ;
   color: #fefefe;
   overflow-x: hidden;
+  /* filter: blur(10px); */
 }
 
 .gradient{
@@ -23,7 +24,7 @@ height: 100%;
 left: calc(50% - 861px/2 - 117.5px);
 top: calc(50% - 861px/2 + 166.5px);
 background: rgba(24, 100, 255, 0.35);
-opacity: 0.5;
+/* opacity: 0.5; */
 filter: blur(200px);
 transform: rotate(-19.25deg);
 z-index: -1;
