--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
   /* outline: 2px solid red;   */
 }
 
@@ -35,7 +36,7 @@ body {
   background-repeat: repeat;
   background-size: cover;
   width: 100%;
-  height: inherit;
+  height: 1000px;
   position: absolute;
   opacity: 0.05;
   top: 0;
